--- a/TodoWithDatabase.csproj
+++ b/TodoWithDatabase.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.12.1" />
     <PackageReference Include="AutoMapper" Version="8.1.1" />
+    <PackageReference Include="Castle.Windsor" Version="5.0.0" />
     <PackageReference Include="FluentAssertions" Version="5.7.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
