--- a/TodoWithDatabase.csproj
+++ b/TodoWithDatabase.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\Main\MainPage.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.12.1" />
     <PackageReference Include="AutoMapper" Version="8.1.1" />
     <PackageReference Include="Castle.Windsor" Version="5.0.0" />
