--- a/TodoWithDatabase.csproj
+++ b/TodoWithDatabase.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Views\Main\MainPage.html" />
+    <None Remove="Views\Public\MainPage.html" />
   </ItemGroup>
 
   <ItemGroup>
