--- a/TodoWithDatabase.csproj
+++ b/TodoWithDatabase.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
