refactor: following the review for the august.12 pull request

--- a/TodoWithDatabase.IntegrationTests/TodoWithDatabase.IntegrationTests.csproj
+++ b/TodoWithDatabase.IntegrationTests/TodoWithDatabase.IntegrationTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoWithDatabase.csproj" />
+    <ProjectReference Include="..\TodoWithDatabase.App.csproj" />
   </ItemGroup>
 
 </Project>
