--- a/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
+++ b/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoWithDatabase.csproj" />
+    <ProjectReference Include="..\TodoWithDatabase.App.csproj" />
   </ItemGroup>
 
 </Project>
