--- a/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
+++ b/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.1" />
-    <PackageReference Include="FluentAssertions" Version="5.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
@@ -20,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TodoWithDatabase.App.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Fixtures\" />
   </ItemGroup>
 
 </Project>
