test(/api/users/{userId}/userWithProjects GET)

--- a/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
+++ b/TodoWithDatabase.UnitTests/TodoWithDatabase.UnitTests.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-	    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -19,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TodoWithDatabase.App.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Fixtures\" />
   </ItemGroup>
 
 </Project>
