--- a/TaskManager/TaskManager.IntegrationTests/TaskManager.IntegrationTests.csproj
+++ b/TaskManager/TaskManager.IntegrationTests/TaskManager.IntegrationTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.11" />
