refactor: move shared test utilities in a new class library

--- a/TaskManager/TaskManager.IntegrationTests/TaskManager.IntegrationTests.csproj
+++ b/TaskManager/TaskManager.IntegrationTests/TaskManager.IntegrationTests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaskManager.TestUtilities\TaskManager.TestUtilities.csproj" />
     <ProjectReference Include="..\TaskManager\TaskManager.csproj" />
   </ItemGroup>
 
