--- a/TaskManager/TaskManager.TestUtilities/TaskManager.TestUtilities.csproj
+++ b/TaskManager/TaskManager.TestUtilities/TaskManager.TestUtilities.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.KeyVault.Core" Version="3.0.4" />
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskManager\TaskManager.csproj" />
   </ItemGroup>
 
